--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .git
 appsettings.json
+.vs/RazvojSoftvera2/v16/.suo
+PoliklinikaAPI/obj/Debug/netcoreapp3.1/PoliklinikaAPI.csprojAssemblyReference.cache
+PoliklinikaDesktop/obj/Debug/netcoreapp3.1/PoliklinikaDesktop.csprojAssemblyReference.cache
+RazvojSoftvera2.sln
