--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,4 @@ PoliklinikaAPI/obj/Debug/netcoreapp3.1/PoliklinikaAPI.csprojAssemblyReference.ca
 PoliklinikaDesktop/obj/Debug/netcoreapp3.1/PoliklinikaDesktop.csprojAssemblyReference.cache
 RazvojSoftvera2.sln
 UpgradeLog.htm
-Poliklinika.Model.deps.json
-Poliklinika.Model.dll
-Poliklinika.Model.pdb
-Poliklinika.Model.csproj.nuget.dgspec.json
-Poliklinika.Model.csproj.nuget.g.props
-Poliklinika.Model.csproj.nuget.g.targets
-project.assets.json
-project.nuget.cache
+Poliklinika.Model/obj/**
