pokusaj podesavanja gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .git
 appsettings.json
-.vs/RazvojSoftvera2/v16/.suo
+.vs/
 PoliklinikaAPI/obj/Debug/netcoreapp3.1/PoliklinikaAPI.csprojAssemblyReference.cache
 PoliklinikaDesktop/obj/Debug/netcoreapp3.1/PoliklinikaDesktop.csprojAssemblyReference.cache
 RazvojSoftvera2.sln
 UpgradeLog.htm
-Poliklinika.Model/**
+Poliklinika/**
