Remove ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .git
 appsettings.json
-.vs/
+.vs/**
 PoliklinikaAPI/obj/Debug/netcoreapp3.1/PoliklinikaAPI.csprojAssemblyReference.cache
 PoliklinikaDesktop/obj/Debug/netcoreapp3.1/PoliklinikaDesktop.csprojAssemblyReference.cache
 RazvojSoftvera2.sln
 UpgradeLog.htm
 Poliklinika.Model/obj/**
+PoliklinikaAPI/obj/**
