--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ PoliklinikaDesktop/obj/Debug/netcoreapp3.1/PoliklinikaDesktop.csprojAssemblyRefe
 RazvojSoftvera2.sln
 UpgradeLog.htm
 Poliklinika.Model/obj/**
+Poliklinika.Model/bin/**
 PoliklinikaAPI/obj/**
 PoliklinikaAPI/bin/**
