--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,8 +2,12 @@ name: .NET
 
 on:
   push:
+    paths-ignore:
+      - 'PoliklinikaAndroid/**'
     branches: [ '**' ]
   pull_request:
+    paths-ignore:
+      - 'PoliklinikaAndroid/**'
     branches: [ '**' ]
 
 jobs:
