--- a/PoliklinikaAndroid/PoliklinikaAndroid.csproj
+++ b/PoliklinikaAndroid/PoliklinikaAndroid.csproj
@@ -100,6 +100,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next">
+      <Version>4.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Identity.Stores">
       <Version>5.0.6</Version>
     </PackageReference>
