--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ PoliklinikaDesktop/bin/**
 PoliklinikaAndroid/bin/**
 PoliklinikaAndroid/obj/**
 Poliklinika.Mobile.Android.csproj
-Poliklinika.Mobile.Android/obk/**
+Poliklinika.Mobile.Android/obj/**
 Poliklinika.Mobile.iOS.csproj
 Poliklinika.Mobile.iOS/obj/**
 Poliklinika.Mobile/obj/**
