--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Poliklinika.Mobile.iOS/obj/**
 Poliklinika.Mobile/obj/**
 Poliklinika.Mobile/Poliklinika.Mobile/obj/**
 Poliklinika.Mobile/Poliklinika.Mobile.Android/obj/**
+Poliklinika.Mobile/Poliklinika.Mobile.UWP/obj/**
+Poliklinika.Mobile.UWP/obj/**
