--- a/Poliklinika.Mobile/Poliklinika.Mobile.UWP/Poliklinika.Mobile.UWP.csproj
+++ b/Poliklinika.Mobile/Poliklinika.Mobile.UWP/Poliklinika.Mobile.UWP.csproj
@@ -147,8 +147,13 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="runtime.win10-arm.Microsoft.Net.Native.Compiler">
+      <Version>2.2.3</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.12"/>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.12" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
   <ItemGroup>
