--- a/Poliklinika.Mobile/Poliklinika.Mobile.iOS/Poliklinika.Mobile.iOS.csproj
+++ b/Poliklinika.Mobile/Poliklinika.Mobile.iOS/Poliklinika.Mobile.iOS.csproj
@@ -132,6 +132,11 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="runtime.win10-arm.Microsoft.Net.Native.Compiler">
+      <Version>2.2.3</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
