Git ignore edited

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,6 @@ Poliklinika.Mobile/obj/**
 Poliklinika.Mobile/Poliklinika.Mobile/obj/**
 Poliklinika.Mobile/Poliklinika.Mobile.Android/obj/**
 Poliklinika.Mobile/Poliklinika.Mobile.UWP/obj/**
+Poliklinika.Mobile/Poliklinika.Mobile.UWP/bin/**
 Poliklinika.Mobile.UWP/obj/**
+Poliklinika.Mobile.UWP/bin/**
