promjena zakazivanja termina i dodan page za placanje

--- a/Poliklinika.Mobile/Poliklinika.Mobile/Poliklinika.Mobile.csproj
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Poliklinika.Mobile.csproj
@@ -40,6 +40,9 @@
     <EmbeddedResource Update="Views\Odjava.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PlacanjePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Poruke.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
