--- a/PoliklinikaDesktop/Properties/Settings.settings
+++ b/PoliklinikaDesktop/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="APIurl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://localhost:44381/api</Value>
+      <Value Profile="(Default)">http://localhost:53943/api</Value>
     </Setting>
   </Settings>
 </SettingsFile>
