--- a/Poliklinika.Model/Poliklinika.Model.csproj
+++ b/Poliklinika.Model/Poliklinika.Model.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
