--- a/PoliklinikaAPI/PoliklinikaAPI.csproj
+++ b/PoliklinikaAPI/PoliklinikaAPI.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.6" />
     <PackageReference Include="NETStandard.Library" Version="2.0.3" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6" />
+	  <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
@@ -27,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <Folder Include="OdjeliSlike\" />
   </ItemGroup>
 
 
